# xfce4-hamster-plugin

./: .clang-format  .clangd  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: debian.yml  ubuntu.yml
panel-plugin/: CMakeLists.txt  Makefile.am  button.c  button.h  config.c  hamster.c  hamster.desktop.in  hamster.h  org.gnome.Hamster.WindowServer.xml  org.gnome.Hamster.xml  plugin.c  settings.c  settings.h  util.c  util.h  view.c  view.h  windowserver.c  windowserver.h  xfce4-popup-hamstermenu.sh
po/: LINGUAS  POTFILES.in  cs.po  de.po  es.po  ru.po  tr.po  uk.po
